# clintrials

./: .coverage  .coveragerc  .gitignore  .pre-commit-config.yaml  .vulture_whitelist.py  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.rst  REPO_HEALTH_ANALYSIS.md  ROADMAP.md  TODO.md  api_manifest.json  coverage.txt  fetch_vendor.ps1  fetch_vendor.sh  imp.py  mypy.ini  patch_framework.py  patch_tests.py  pyproject.toml  setup.ps1  setup.sh  sitecustomize.py
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  maintenance.md
.github/workflows/: accessibility.yml  deploy-hub.yml  deploy.yml  docs.yml  lint.yml  release.yml  sanitize-bot-comment.yml  tdd-audit.yml  test-suite.yml
.hypothesis/constants/: 0319a49055bcde18  0a17045c5850770a  116109af51dc2afd  152c68a41719b386  16966faf82c35e78  20902782b784faf9  263f96e0c255ebf0  32f25d4b1bedcc3b  3f472b85df853f6f  42e511876eead701  43313d65d8481cbd  4d27998df49ce21e  5adf84002d557088  6829289ebedeb8ef  6b77a014f2ca8675  6b858c92e47aa396  6ff38b82d217b9d2  785757f0a247667b  802a1f44f27767b4  9b2f98a0412ca4aa  9dc2cdb661c588c9  a26964670c6899ee  b57604acd54f008d  bb15f2df1ddbe1e6  c4e9b64168cc84bc  cc1f2b732b780a14  d8d3cf7280c38473  dbcf362192a52d52  f1d4785a00a92ee1
.mypy_cache/3.12/: @plugins_snapshot.json  __future__.data.json  __future__.meta.json  _ast.data.json  _ast.meta.json  _bisect.data.json  _bisect.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compression.data.json  _compression.meta.json  _ctypes.data.json  _ctypes.meta.json  _decimal.data.json  _decimal.meta.json  _heapq.data.json  _heapq.meta.json  _locale.data.json  _locale.meta.json  _operator.data.json  _operator.meta.json  _random.data.json  _random.meta.json  _socket.data.json  _socket.meta.json  _stat.data.json  _stat.meta.json  _thread.data.json  _thread.meta.json  _warnings.data.json  _warnings.meta.json  _weakref.data.json  _weakref.meta.json  _weakrefset.data.json  _weakrefset.meta.json  abc.data.json  abc.meta.json  argparse.data.json  (+189 more)
clintrials/: __init__.py  coll.py  common.py  logging.py  numerics.py  recruitment.py  simulation.py  tte.py  util.py  utils.py  validation.py  visualization.py
clintrials/core/: __init__.py  cohort.py  errors.py  math.py  numerics.py  parallel.py  protocol.py  recruitment.py  registry.py  report.py  rng.py  schema.py  simulation.py  stats.py  tte.py  unified.py  viz_interface.py
clintrials/dashboard/: factory.py  main.py
clintrials/dosefinding/: __init__.py  crm.py  efficacytoxicity.py  efftox.py  wagestait.py  watu.py
clintrials/legacy/: peps2v1.py  simulation.py  utils.py
clintrials/phase2/: __init__.py  simple.py
clintrials/phase3/: __init__.py  gsd.py
clintrials/visualization/: __init__.py  helpers.py  models.py  provider.py  report.py
clintrials/winratio/: __init__.py  compare.py  data_generation.py  main.py  simulate.py  statistics.py
doc/: conf.py
docs/: Makefile  accessibility.rst  changelog.md  changelog.rst  conf.py  contributing.md  contributing.rst  development.md  getting_started.rst  how_to.md  index.md  index.rst  installation.md  quickstart.md  user_guide.md  win_ratio_simulation.md  win_ratio_simulation.rst
docs/_extra/: hub  sw.js
docs/_static/: custom.css  custom.js  index.html
docs/how_to/: recipes.md
docs/reference/: clintrials.core.math.rst  clintrials.core.numerics.rst  clintrials.core.recruitment.rst  clintrials.core.rst  clintrials.core.simulation.rst  clintrials.core.stats.rst  clintrials.core.tte.rst  clintrials.dashboard.main.rst  clintrials.dashboard.rst  clintrials.dashboard.views.crm_view.rst  clintrials.dashboard.views.efftox_view.rst  clintrials.dashboard.views.rst  clintrials.dashboard.views.winratio_view.rst  clintrials.dosefinding.crm.rst  clintrials.dosefinding.efficacytoxicity.rst  clintrials.dosefinding.efftox.rst  clintrials.dosefinding.rst  clintrials.dosefinding.wagestait.rst  clintrials.dosefinding.watu.rst  clintrials.phase2.bebop.peps2v1.rst  clintrials.phase2.bebop.peps2v2.rst  clintrials.phase2.bebop.rst  clintrials.phase2.rst  clintrials.phase2.simple.rst  clintrials.phase3.gsd.rst  clintrials.phase3.rst  clintrials.rst  clintrials.utils.rst  clintrials.winratio.compare.rst  clintrials.winratio.data_generation.rst  clintrials.winratio.main.rst  clintrials.winratio.rst  clintrials.winratio.simulate.rst  clintrials.winratio.statistics.rst  index.md  index.rst  modules.rst
docs/tutorials/: CRM.ipynb  CRM.nbconvert.ipynb  EffTox - Nuts and Bolts.ipynb  EffTox.ipynb  GroupSequentialDesigns.ipynb  WATU.ipynb  sequential_design.ipynb  sequential_design_draft.ipynb
docs/user_guide/: tutorials.md
hub/: build-manifest.json  index.html  manifest.json  sw.js
scripts/: ast_ui_linter.py  audit_timeline.py  serialize_schemas.py  sync_whitelist.sh  verify_api_signatures.py  verify_pep440_version.py
src/clintrials/: __init__.py  utils.py
tests/: conftest.py  test_a11y_features.py  test_accessibility.py  test_audit_timeline.py  test_coll.py  test_crm.py  test_crm_fixtures.py  test_dashboard.py  test_dashboard_preview.py  test_dashboard_views.py  test_debug_watu.py  test_docs_completeness.py  test_docs_links.py  test_efftox.py  test_efftox_integration.py  test_errors.py  test_framework.py  test_gsd.py  test_health_report.py  test_layout_configurations.py  test_logging.py  test_math.py  test_numerics.py  test_parallel.py  test_readme_examples.py  test_recruitment.py  test_report.py  test_schema.py  test_simulation.py  test_simulation_bounds.py  test_stats.py  test_table_serialization.py  test_threeplusthree.py  test_tte_module.py  test_unified_protocol.py  test_util.py  test_utils.py  test_validation.py  test_verify_api_signatures.py  test_verify_pep440_version.py  (+10 more)
tests/fixtures/: Dockerfile  README.md  crm_math_helpers.py  expected_posterior_dlt_probs.csv  gen_fixtures.R  gen_fixtures.py  generate_fixtures.sh  next_dose_recommendations.csv
tests/helpers/: __init__.py  crm.py  efftox.py  recruitment.py
(+1561 files in other folders)
