[tool.poetry]
name = "clintrials"
version = "0.1.4"
description = "clintrials is a library of clinical trial designs and methods in Python"
license = "GPL-3.0"
authors = ["Kristian Brock <kristian.brock@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/brockk/clintrials"
repository = "https://github.com/brockk/clintrials"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = ">=3.9"
ggplot = ">=0.6.5"
matplotlib = ">=1.4.3"
numpy = ">=1.9.2"
pandas = ">=0.15.2"
scipy = ">=0.15.1"
statsmodels = ">=0.6.1"
sphinx = {version = "^7.2.6", optional = true}
myst-parser = {version = "^2.0.0", optional = true}
furo = {version = "^2024.1.29", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^8.2.0"
black = "^25.1.0"
ruff = "^0.12.5"
isort = "^6.0.1"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = "pyproject.toml:tool.poetry.version"
branch = "main"
changelog_file = "CHANGELOG.md"
tag_format = "v{version}"
upload_to_pypi = false
commit_author = "github-actions <github-actions@github.com>"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F"]
extend-select = ["T201"]
ignore = [
    "E203",
    "E402",
    "E731",
    "E722",
    "E741",
    "E712",
    "E501",
    "F821",
    "F401",
    "F841",
    "E713",
]
exclude = ["clintrials/phase2/bebop/peps2v1.py", "tutorials/*.ipynb"]

[tool.pytest.ini_options]
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]

[tool.poetry.extras]
docs = ["sphinx", "myst-parser", "furo"]
