[tool.poetry]
name = "clintrials"
version = "0.1.4"
description = "clintrials is a library of clinical trial designs and methods in Python"
license = "GPL-3.0"
authors = ["Kristian Brock <kristian.brock@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/brockk/clintrials"
repository = "https://github.com/brockk/clintrials"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = ">=3.9, !=3.9.7"
numpy = ">=1.21.0"
pandas = ">=1.3.0"
scipy = ">=1.7.0"
statsmodels = ">=0.13.0"
matplotlib = {version = ">=3.5.0", optional = true}
streamlit = {version = ">=1.0.0", optional = true}
altair = {version = ">=4.2.0", optional = true}
plotly = {version = ">=5.0.0", optional = true}
sphinx = {version = "^7.2.6", optional = true}
furo = {version = ">=2024.1.29,<2026.0.0", optional = true}
tqdm = "^4.68.3"
fpdf2 = {version = "^2.7.9", optional = true}

[tool.poetry.scripts]
dashboard = "clintrials.visualization.dashboard.launcher:main"

[tool.poetry.group.dev.dependencies]
pytest = [
    {version = "^8.2.0", python = "<3.10"},
    {version = "^9.0.3", python = ">=3.10"}
]
tomli = {version = "^2.0.1", python = "<3.11"}
pytest-cov = ">=4.1,<8.0"
ruff = ">=0.12.5,<0.16.0"
pre-commit = "^4.2.0"
pytest-mock = "^3.12.0"
hypothesis = "^6.98.13"
nbsphinx = "^0.9.8"
myst-parser = "^2.0.0"
pytest-playwright = ">=0.4.0"
axe-playwright-python = ">=0.1.0"
playwright = ">=1.40.0"
ipython = "<9.0.0"
ipykernel = "<7"

[build-system]
requires = ["poetry-core>=1.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = "pyproject.toml:tool.poetry.version"
branch = "main"
changelog_file = "CHANGELOG.md"
tag_format = "v{version}"
upload_to_pypi = false
commit_author = "github-actions <github-actions@github.com>"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py39"
exclude = ["docs/tutorials/"]

[tool.ruff.lint]
select = ["E", "F", "W"]
extend-select = ["T201", "D102", "D103", "D417", "TID251"]
ignore = [
    "E203",
    "E402",
    "E731",
    "E722",
    "E741",
    "E712",
    "E501",
    "E713",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]
"clintrials/core/stats.py" = ["TID251"]


[tool.ruff.lint.flake8-tidy-imports.banned-api]
"clintrials.core.registry.REGISTRY".msg = "Namespace collision: Use CORE_REGISTRY instead."
"clintrials.visualization.dashboard.factory.REGISTRY".msg = "Namespace collision: Use UI_REGISTRY instead."
"scipy.stats.chi2".msg = "Redundant math: Use clintrials.core.stats.calc_pearson_chi_square instead."
"scipy.stats.chi2.cdf".msg = "Redundant math: Use clintrials.core.stats.calc_pearson_chi_square instead."

[tool.pytest.ini_options]
addopts = "--ignore=tests/test_accessibility.py"
testpaths = ["tests"]

[tool.poetry.extras]
docs = ["sphinx", "furo"]
viz = ["streamlit", "altair", "plotly", "matplotlib", "fpdf2"]
